--- a/simpleFlightSearch/src/main/resources/application.properties
+++ b/simpleFlightSearch/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:mysql://localhost:3306/uniteddb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql = true
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+logging.level.org.hibernate.SQL = debug
+
+
+
