--- a/simpleFlightSearch/src/main/resources/application.properties
+++ b/simpleFlightSearch/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 logging.level.org.hibernate.SQL = debug
 
+spring.datasource.initialization-mode=always
+spring.datasource.platform=mysql
 
 
